--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -5,6 +5,7 @@ Apache Solr integration x.x-x.x, xxxx-xx-xx
 
 Apache Solr integration 7.x-1.x-xxxx, xxxx-xx-xx
 ------------------------------
+#1050044 by pwolanin: hook_theme API fix, and revert to using core theme('search_results').
 #1026916 by dmitry_bezer: apachesolr_get_enabled_facets() mandatory parameter was omitted.
 #528086  by pwolanin: Fix for special html entity search and display bugs. 
 #1020780 by pwolanin: Store variable settings per server for better flexibility.
