--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,7 @@ Apache Solr integration x.x-x.x, xxxx-xx-xx
 
 Apache Solr integration 7.x-1.x-xxxx, xxxx-xx-xx
 ------------------------------
+#1085630 by pwolanin: Index taxonomy term ancestors into term reference-based field.
 #1050000 by pwolanin: More generically prevent calling nodeapi update_index when indexing.
 #1060536 by jpmckinney: Long title and Default shortcut link obscured in overlay.
 #1060550 by jpmckinney: admin/build/block should be admin/structure/block.
