--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -5,7 +5,7 @@ Apache Solr integration x.x-x.x, xxxx-xx-xx
 Apache Solr integration 7.x-1.x-xxxx, xxxx-xx-xx
 ------------------------------
 #996800  by elliotttf: trim host, port, and path strings to prevent connection errors.
-#1020780 by jpmckinney: cleanup of variable_get to apachesolr_server_variable_get conversion.
+#1020780 by jpmckinney, pwolanin: cleanup of variable_get to apachesolr_server_variable_get conversion.
 #1085630 by pwolanin: Index taxonomy term ancestors into term reference-based field.
 #1050000 by pwolanin: More generically prevent calling nodeapi update_index when indexing.
 #1060536 by jpmckinney: Long title and Default shortcut link obscured in overlay.
