--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,7 @@ Apache Solr Search Integration x.x-x.x, xxxx-xx-xx
 
 Apache Solr Search Integration 6.x-1.3, xxxx-xx-xx
 ------------------------------
+#996800 by elliotttf, pwolanin: use trim on host, port, path.
 #890314 by quaoar: avoid searching twice when using the search block. 
 #1064782 by jpmckinney: Use module_load_include, module_load_install instead of include_once
 #791916 by Network | jpmckinney: Allow facet search block to have children always show
