--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,7 @@ Apache Solr integration x.x-x.x, xxxx-xx-xx
 
 Apache Solr integration 6.x-2.x, xxxx-xx-xx
 ------------------------------
+#996800 by pwolanin: Connection strings (host, port, path) should use trim().
 #890314 by quaoar: avoid searching twice when using the search block.
 #1064782 by jpmckinney: Use module_load_include, module_load_install instead of include_once
 #925608 by janusman | jpmckinney: Quick perf improvement: cache term ancestors on indexing
