--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -7,6 +7,7 @@ Apache Solr integration 7.x-1.x-xxxx, xxxx-xx-xx
 
 Apache Solr integration 7.x-1.0-BETA4, xxxx-xx-xx
 ------------------------------
+#1092910 by pwolanin: missing date field conversions from #1088208.
 #1090530 by pwolanin: Further schema-related code fixes following from #1088208.
 #783366  by elliotttf: Invoke hook_apachesolr_prepare_query() in apachesolr_search_browse
 #1078766 by elliotttf: code-style cleanup according Coder module.
