--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -2,8 +2,12 @@
 Apache Solr Search Integration x.x-x.x, xxxx-xx-xx
 ------------------------------
 
+Apache Solr Search Integration 6.x-1.x, xxxx-xx-xx
+------------------------------
+
 Apache Solr Search Integration 6.x-1.3, xxxx-xx-xx
 ------------------------------
+#993448 by pwolanin, scor: get Solr result docs as stdClass instead of Apache_Solr_Document.
 #1050000 by pwolanin: More generically prevent calling nodeapi update_index when indexing.
 #996800 by elliotttf, pwolanin: use trim on host, port, path.
 #890314 by quaoar: avoid searching twice when using the search block. 
