--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,7 @@ Apache Solr integration x.x-x.x, xxxx-xx-xx
 
 Apache Solr integration 6.x-2.x, xxxx-xx-xx
 ------------------------------
+#1033630 by jpmckinney | Patrizio: Apache Solr node access broken permissions rebuilding.
 #979194 by janusman: Missing 'module' element in menu_alter for taxonomy hijack.
 #883106 by jpmckinney | pwolanin: move the OR facet code to the finalize hook.
 #993448 by pwolanin, scor: get Solr result docs as stdClass instead of Apache_Solr_Document.
