--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -7,6 +7,7 @@ Apache Solr integration 7.x-1.x-xxxx, xxxx-xx-xx
 
 Apache Solr integration 7.x-1.0-BETA4, xxxx-xx-xx
 ------------------------------
+#562214 by ecofinn, wmostry, jpmckinney: Problems with double-encoded ampersands.
 #997480 by jpmckinney | davidwhthomas: Facet checkboxes are duplicated following other javascript activity on page.
 #1098038 by pwolanin, mgifford: fix spelling suggestion incorrect use of LABEL tag.
 #1099390 by jpmckinney: Fatal error: Call to undefined function apachesolr_nodeaccess_build_subquery().
