--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -7,6 +7,7 @@ Apache Solr Search Integration 6.x-1.x, xxxx-xx-xx
 
 Apache Solr Search Integration 6.x-1.3, xxxx-xx-xx
 ------------------------------
+#903802 by jpmckinney: BLOCK_CACHE_PER_PAGE conflicts with theme_apachesolr_facet_list.
 #882638 by pwolanin, jpmckinney: Clean the text inside indexed tags.
 #864146 by pwolanin: When moving fq to q.alt, we should parenthesize each fq.
 #562214 by ecofinn, wmostry, jpmckinney: Problems with double-encoded ampersands.
