--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -7,8 +7,9 @@ Apache Solr integration 7.x-1.x-xxxx, xxxx-xx-xx
 
 Apache Solr integration 7.x-1.0-BETA4, xxxx-xx-xx
 ------------------------------
-#562214 by ecofinn, wmostry, jpmckinney: Problems with double-encoded ampersands.
-#997480 by jpmckinney | davidwhthomas: Facet checkboxes are duplicated following other javascript activity on page.
+#1080652 by elliotttf, pwolanin: Allow other modules to return search results on solr failure.
+#562214  by ecofinn, wmostry, jpmckinney: Problems with double-encoded ampersands.
+#997480  by jpmckinney | davidwhthomas: Facet checkboxes are duplicated following other javascript activity on page.
 #1098038 by pwolanin, mgifford: fix spelling suggestion incorrect use of LABEL tag.
 #1099390 by jpmckinney: Fatal error: Call to undefined function apachesolr_nodeaccess_build_subquery().
 #1098222 by pwolanin: Rename and make the nodeaccess module more generic.
