--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -7,6 +7,7 @@ Apache Solr Search Integration 6.x-1.x, xxxx-xx-xx
 
 Apache Solr Search Integration 6.x-1.3, xxxx-xx-xx
 ------------------------------
+#899590 by jpmckinney, elliotttf: Support indexing of CCK fields that are not facets.
 #1084332 by pwolanin, elliotttf: replace drush command with drush make file to get Solr php library.
 #993476 by jpmckinney, pwolanin: allow arbitrary results per page in the 0-200 range.
 #891962 by Network, pwolanin: Solr_Base_Query->parse_filters() causes filters to disappear when using or search on taxonomy id's.
