--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,7 @@ Apache Solr integration x.x-x.x, xxxx-xx-xx
 
 Apache Solr integration 6.x-2.x, xxxx-xx-xx
 ------------------------------
+#899590 by jpmckinney, elliotttf: Support indexing of CCK fields that are not facets.
 #993476 by jpmckinney, pwolanin: allow arbitrary results per page in the 0-200 range.
 #903802 by jpmckinney: BLOCK_CACHE_PER_PAGE conflicts with theme_apachesolr_facet_list.
 #882638 by pwolanin, jpmckinney: Clean the text inside indexed tags.
