--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -7,7 +7,8 @@ Apache Solr integration 7.x-1.x-xxxx, xxxx-xx-xx
 
 Apache Solr integration 7.x-1.0-BETA4, xxxx-xx-xx
 ------------------------------
-#899590 by jpmckinney, elliotttf: Support indexing of attached fields that are not facets.
+#1107502 by pwolanin: Merge relevant parts of php client into DrupalApacheSolrService.
+#899590  by jpmckinney, elliotttf: Support indexing of attached fields that are not facets.
 #993476  by jpmckinney, pwolanin: allow arbitrary results per page in the 0-200 range.
 #1080652 by elliotttf, pwolanin: Allow other modules to return search results on solr failure.
 #562214  by ecofinn, wmostry, jpmckinney: Problems with double-encoded ampersands.
