--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -7,6 +7,7 @@ Apache Solr integration 7.x-1.x-xxxx, xxxx-xx-xx
 
 Apache Solr integration 7.x-1.0-BETA4, xxxx-xx-xx
 ------------------------------
+#1112362 by pwolanin: cleanup following #1107502 to better use drupal_http_request.
 #1107502 by pwolanin: Merge relevant parts of php client into DrupalApacheSolrService.
 #899590  by jpmckinney, elliotttf: Support indexing of attached fields that are not facets.
 #993476  by jpmckinney, pwolanin: allow arbitrary results per page in the 0-200 range.
