--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -5,7 +5,7 @@ Apache Solr integration x.x-x.x, xxxx-xx-xx
 Apache Solr integration 7.x-1.x-xxxx, xxxx-xx-xx
 ------------------------------
 
-Apache Solr integration 7.x-1.0-BETA4, xxxx-xx-xx
+Apache Solr integration 7.x-1.0-beta4, 2011-04-04
 ------------------------------
 #1103602 by pwolanin: prevent PHP Notice when there is an invalid term reference field.
 #1097988 by jpmckinney: avoid 'using default converter' warning on Solr startup.
