--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -2,7 +2,7 @@
 Apache Solr integration 7.x-1.x-xxxx, xxxx-xx-xx
 ------------------------------
 
-Apache Solr integration 7.x-1.0-beta-5, xxxx-xx-xx
+Apache Solr integration 7.x-1.0-beta-5, 2011-04-07
 ------------------------------
 #1118646 by cpliakas, pwolanin: Fields now displayed on search index report page.
 #1117152 by cpliakas: Added a cancel link to the server edit page.
