--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -2,6 +2,10 @@
 Apache Solr integration 7.x-1.x-xxxx, xxxx-xx-xx
 ------------------------------
 
+Apache Solr integration 7.x-1.0-xxxx, 2011-xx-xx
+------------------------------
+#1121170 by pwolanin: remove facet-related code to prep for Facet API integration.
+
 Apache Solr integration 7.x-1.0-beta-5, 2011-04-07
 ------------------------------
 #799970  by pwolanin: update README for config changes.
