--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,7 @@ Apache Solr integration 7.x-1.x-xxxx, xxxx-xx-xx
 
 Apache Solr integration 7.x-1.0-xxxx, 2011-xx-xx
 ------------------------------
+#1127520 by cpliakas, pwolanin: make the breadcrumb look reasonable on facet form.
 #1127302 by Janusman: some variables were not removed on uninstall.
 #1126806 by pwolanin, Janusman: restore facet browsing functionality.
 #1126488 by cpliakas: Implemented hierarchical taxonomy facets.
