--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -5,7 +5,7 @@ Apache Solr Search Integration x.x-x.x, xxxx-xx-xx
 Apache Solr Search Integration 6.x-1.x, xxxx-xx-xx
 ------------------------------
 
-Apache Solr Search Integration 6.x-1.3, xxxx-xx-xx
+Apache Solr Search Integration 6.x-1.3, 2011-04-22
 ------------------------------
 #920482 by jpmckinney: $info_split['date'] template variable should contain changed, not created, date.
 #871440 by jpmckinney, elliotttf: Solr taxonomy page displays search form and blocks when the user has no access.
