--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,7 @@ Apache Solr integration x.x-x.x, xxxx-xx-xx
 
 Apache Solr integration 6.x-2.x, xxxx-xx-xx
 ------------------------------
+#1104456 by jpmckinney, jhedstrom: For show more/fewer links, appendTo .content, instead of to the block itself.
 #675262 by kcoop: HTML entities erroneously generated for author names.
 #920880 by jpmckinney, mihha: facet_block_callback not propagated.
 #783366 by jpmckinney, pwolanin, elliotttf: Synchronize apachesolr_search_browse with apachesolr_search_execute.
