--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,10 @@ Apache Solr Search Integration x.x-x.x, xxxx-xx-xx
 
 Apache Solr Search Integration 6.x-1.x, xxxx-xx-xx
 ------------------------------
+#1084332 by pwolanin, elliotttf: follow-up to add missing apachesolr.make
+#1141046 by craig_: fix variable name for highlighting.
+#1146054 by pwolanin: Remove unneded & (reference) operators for objects.
+
 
 Apache Solr Search Integration 6.x-1.3, 2011-04-22
 ------------------------------
