--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,7 @@ Apache Solr integration x.x-x.x, xxxx-xx-xx
 
 Apache Solr integration 6.x-2.x, xxxx-xx-xx
 ------------------------------
+#881760 by pwolanin: account for http://drupal.org/node/345591
 #1141046 by craig_, pwolanin, jpmckinney: Highlight field not used, when setting variable apachesolr_hl_highlight.
 #1146054 by pwolanin: Remove unneded & (reference) operators for objects.
 #1104456 by jpmckinney, jhedstrom: For show more/fewer links, appendTo .content, instead of to the block itself.
