--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,7 @@ Apache Solr integration 7.x-1.x-xxxx, xxxx-xx-xx
 
 Apache Solr integration 7.x-1.0-xxxx, 2011-xx-xx
 ------------------------------
+#1098860 by jpmckinney: Add apachesolr_cron_check_node_table back to cron.
 #1159172 by cpliakas: Remove unused facet functions.
 #926564 by jpmckinney: Add get_subqueries().
 #1064972 by jpmckinney: Use is_callable not function_exists, where applicable.
