--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,12 +4,13 @@ Apache Solr integration 7.x-1.x-xxxx, xxxx-xx-xx
 
 Apache Solr integration 7.x-1.0-xxxx, 2011-xx-xx
 ------------------------------
+#1159172 by jpmckinney: Remove unused facet functions.
 #1167172 by cpliakas: Improve the breadcrumb handling for facet settings forms.
 #1157864 by cpliakas: Integrate with Facet API's depencency plugin system.
 #912758  by pwolanin: use Facet API's support for faceting missing values.
 #1098860 by jpmckinney: Add apachesolr_cron_check_node_table back to cron.
 #1159172 by cpliakas: Remove unused facet functions.
-#926564 by jpmckinney: Add get_subqueries().
+#926564  by jpmckinney: Add get_subqueries().
 #1064972 by jpmckinney: Use is_callable not function_exists, where applicable.
 #1097988 by pwolanin: Add omitHeader to save on bandwidth.
 #1154770 by jpmckinney, pwolanin: Must double quote filter query values if containing space or colon.
