Issue #1162600 by pwolanin: Display an error if the schema version in use is incompatible.

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,10 @@ Apache Solr integration 7.x-1.x-xxxx, xxxx-xx-xx
 
 Apache Solr integration 7.x-1.0-xxxx, 2011-xx-xx
 ------------------------------
+
+Apache Solr integration 7.x-1.0-beta7, 2011-05-24
+------------------------------
+#1162600 by pwolanin: Display an error if the schema version in use is incompatible.
 #1162078 by jpmckinney: fix for Undefined variable: stats_summary.
 #1159172 by jpmckinney: Remove unused facet functions.
 #1167172 by cpliakas: Improve the breadcrumb handling for facet settings forms.
