--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,9 @@ Apache Solr integration x.x-x.x, xxxx-xx-xx
 
 Apache Solr integration 6.x-2.x, xxxx-xx-xx
 ------------------------------
+
+Apache Solr integration 6.x-2.0-beta4, 2011-05-26
+------------------------------
 #1163520 by jpmckinney: some documents getting missed by indexer.
 #1165932 by Ravi.J, jpmckinney: Uncaught exception on MLT block.
 #1098860 by jpmckinney: Add apachesolr_cron_check_node_table back to cron.
