--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,7 @@ Apache Solr integration 7.x-1.x-xxxx, xxxx-xx-xx
 
 Apache Solr integration 7.x-1.0-xxxx, 2011-xx-xx
 ------------------------------
+#1150174 by mr.andrey, pwolanin: Strip content of script and similar tags when indexing.
 #1183742 by MrHaroldA, pwolanin: Index all numeric field API fields by default.
 #1188614 by ASupinski: Expand Hook_Hook_Info to include other hooks.
 
