--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,7 @@ Apache Solr Search Integration x.x-x.x, xxxx-xx-xx
 
 Apache Solr Search Integration 6.x-1.x, xxxx-xx-xx
 ------------------------------
+#1224748 by pwolanin: prevent fatal error on hook cron by omitting nodeapi params.
 #1188824 by craig_: skip apachesolr_cron if in read-only mode.
 #1186830 by jp.stacey: db_rewrite_sql on term_hierarchy can lead to invalid SQL.
 
